[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tiles/Graphics/Conveyor/HoodShadow0000.png" type="Texture" id=1]
[ext_resource path="res://Tiles/Graphics/Conveyor/Belt0000.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Graphics/Conveyor/In0000.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Graphics/Conveyor/TileBottom0000.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Graphics/Conveyor/Tile0000.png" type="Texture" id=5]
[ext_resource path="res://Tiles/ConveyorIn.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.4, 34.4 )

[sub_resource type="Animation" id=2]
resource_name = "Belt"
length = 0.3
loop = true
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Belt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.298, 0.3 ),
"transitions": PoolRealArray( 1, 1e-05, 1e-05 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}

[node name="ConveyorIn" type="StaticBody2D"]
script = ExtResource( 6 )

[node name="IconPoint" type="Position2D" parent="."]
position = Vector2( 0, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.57381, -0.420448 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Tile" type="Sprite" parent="Sprite"]
texture = ExtResource( 5 )

[node name="In" type="Sprite" parent="Sprite"]
texture = ExtResource( 3 )

[node name="Belt" type="Sprite" parent="Sprite"]
texture = ExtResource( 2 )

[node name="HoodShadow" type="Sprite" parent="Sprite"]
texture = ExtResource( 1 )

[node name="TileBottom" type="Sprite" parent="Sprite"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Belt = SubResource( 2 )

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]
